# lurk

./: .gitignore  .lurk.cabal.swp  .lurk.hs.swp  .ssltest.hs.swp  Makefile  README  README.md  WISHLIST  bruinbot.hs  bruinbot.py  loadurlandprint.hs  lurk.cabal  lurk.hs  ssltest.hs  tags
Bruinbot/: Curl.hs  IRC.hs  Url.hs
Lurk/: .Bot.hs.swp  Bot.hs  Config.hs  Connect.hs  Curl.hs  Eval.hs  Google.hs  Handler.hs  Logger.hs  Types.hs  Url.hs  Utils.hs
Lurk/Bot/: Config.hi  Config.hs  Connect.hs  IRC.hs
Lurk/Handler/: Choose.hs  Eval.hs  EverythingElse.hs  Google.hs  Logging.hs  Slap.hs  Urls.hs
src/: lurk.hs  tags
src/Lurk/: Bot.hs  Handler.hs  Handlers.hs  Logger.hs  Types.hs  Url.hs
src/Lurk/Bot/: Defaults.hs  IRC.hs
src/Lurk/Handler/: Choose.hs  Highfive.hs  Logging.hs  Slap.hs
