name:            lurk
version:         0.0
synopsis:        Lurk IRC Library and Executable
license:         BSD3
author:          Renning Bruns <ren@linux.ucla.edu>
homepage:        https://github.com/nullren/lurk
build-type:      Simple
cabal-version:   >= 1.2

library
  hs-source-dirs:  src

  build-depends:
    base
    , random
    , mtl
    , network
    , crypto-api
    , old-time
    , bytestring
    , curl
    , HDBC
    , split
    , HTTP
    , HDBC-sqlite3
    , irc
    , tagsoup
    , TinyURL
    , tls
    , tls-extra
    , utf8-string

  exposed-modules:
    Lurk.Bot
    Lurk.Handler.Choose
    Lurk.Handler.EverythingElse
    Lurk.Handler.Google
    Lurk.Handler.Logging
    Lurk.Handler.Slap
    Lurk.Handler.Urls

executable lurk
  main-is:         lurk.hs
  hs-source-dirs:  src
  build-depends:
    base
    , random
    , mtl
    , network
    , crypto-api
    , old-time
    , bytestring
    , curl
    , HDBC
    , split
    , HTTP
    , HDBC-sqlite3
    , irc
    , tagsoup
    , TinyURL
    , tls
    , tls-extra
    , utf8-string
